Fixed #35 on tablet

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -15,7 +15,7 @@
 
 .welcome-button {
     margin: 50px 0px 50px 0px;
-    padding: 20px;
+    padding: 20px 50px 20px 50px;
     width: 20%;
     border-radius: 20px;
     min-width: fit-content;
